== Released [attachment:wiki:SoftwareReleases:eLife-1.6a18.zip V1.6a18] 

''' Jetty '''

Feed jetty startup errors to the logging system to assist debugging startup problems

''' Script '''

Ensure missing script directory will not kill the system on startup

''' Templates '''

Added Jetty user / password template   realm.properties   to the templates captured in the release file

== Released [attachment:wiki:SoftwareReleases:eLife-1.6a17.zip V1.6a17] 

''' Bootstrap '''

Added INTEGRATOR_MODE ACTIVE="Y|N"  (default N) to the bootstrap file. This will later be used to provide extra debugging of running triggers and integrator macros.

''' Labels '''

Labels moved from config file to it's own file (labels.xml under datafiles), this will facilitate label support accross multiple devices , eg. CBUS + Dynalite
 
== Released [attachment:wiki:SoftwareReleases:eLife-1.6a16.zip V1.6a16] [attachment:wiki:SoftwareReleases:eLife-1.6a16-libs.zip Libs-V1.6a16 ]==

''' General '''

Mods to build scripts to ensure Groovy libraries are included


''' CBUS '''

Fixed bug with startup synchronizing
Split startup to wait until response from CBUS

A file labels.xml must be created in the datafiles directory as follows.

{{{

<LABELS>
	<TEXT>
	            <LABEL KEY="FRONT_LIGHT" VALUE="Front Light"/>
	            <LABEL KEY="VOLUME" VALUE="Volume Level"/>
	            <LABEL KEY="SPRINKLERS" VALUE="Sprinklers"/>
	</TEXT>
</LABELS>

}}}

Configuration of each DLT is within a CBUS block as follows

<LABEL ACTIVE="Y" KEY="22"   NAME="DLT 1"  DISPLAY_NAME="DLT1" DEFAULT = "SPRINKLERS" />

The label can be changed dynamically by a CONTROL message within a script or macro.

For example

{{{

  <CONTROL KEY="MACRO" COMMAND="getList" EXTRA="DLT1 front light" TYPE="" STATUS="noDelete,noEdit" RUNNING="0">
    <CONTROL KEY="DLT1" COMMAND="label" EXTRA="FRONT_LIGHT" EXTRA2="" EXTRA3="" EXTRA4="" EXTRA5="" TARGET="All" TARGET_USER="" />
  </CONTROL>
  
 }}}
  
  
''' Comfort '''
