@@ -1,4 +1,4 @@
-#Sun Oct 15 19:31:23 EST 2006
+#Mon Oct 16 22:56:28 EST 2006
 major_version=1.6a
-minor_version=18
+minor_version=19
 app_name=eLife
